[gd_scene load_steps=2 format=2]

[ext_resource path="res://Element.gd" type="Script" id=1]

[node name="Control" type="Panel"]
anchor_right = 0.179922
anchor_bottom = 0.215
margin_right = -46.24
margin_bottom = -7.62939e-06
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="AtomicNumber" type="Label" parent="VBoxContainer"]
margin_right = 138.0
margin_bottom = 14.0
text = "Atomic Number"
align = 1

[node name="ChemicalSymbol" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 138.0
margin_bottom = 32.0
text = "Chemical Symbol"
align = 1

[node name="ChemicalName" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 138.0
margin_bottom = 50.0
text = "Chemical Name"
align = 1

[node name="RelativeAtomicMass" type="Label" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 138.0
margin_bottom = 68.0
text = "Relative Atomic Mass"
align = 1
